# Lucid-Lang

./: .clang-format  .clangd  .geminiignore  .gitignore  CMakeLists.txt  LICENSE  README.md
.agents/rules/: luc-grammar.md
.github/instructions/: luc-code-gen.instructions.md
.github/prompts/: add-task.prompt.md  show-tasks.prompt.md  task-complete.prompt.md
archive/completed_plans/: fix_plan.md  implementation_plan.md  parser_debug_plan.md  parser_plan.md  parser_refactor_plan.md  parser_refactor_plan2.md  redesign.md  semantic_phase2_debug1.md  semantic_phase3_rebuild.md  semantic_refactor_plan.md  semantic_symbol_improvement.md
archive/deprecatedCode/: BuiltinMethodRegistry.hpp  DiagnosticEngine.cpp  DiagnosticEngine.hpp  SemanticDecl.cpp  SemanticExpr.cpp  SemanticStmt.cpp
archive/in_working_plans/: ast_analysis.md  bugs_report.md  implementation_plan.md  parser_refactor3.md  type_resolver_refactor_plan.md
archive/luc-language-support-debug/: README.md
archive/luc-language-support-debug/snippets/: luc.json
archive/luc-language-support-debug/syntaxes/: luc.tmLanguage.json
archive/plans/: parser_bug_report.md  parser_bug_report2.md  parser_refactor_plan1.md  refactor_plan.md  semantic_phase2_debug1.md  type_resolver_debug.md
archive/semantic/: SemanticAnalyzer.cpp  SemanticAnalyzer.hpp  SemanticSymbol.hpp  SymbolTable.cpp  SymbolTable.hpp
archive/semantic/checkers/: SemanticChecker.hpp
archive/semantic/collectors/: SemanticCollector.cpp  SemanticCollector.hpp
archive/semantic/helpers/: NameMangler.hpp  SemanticContext.cpp  SemanticContext.hpp
archive/semantic/resolveType/: TypeDispatcher.cpp  TypeDispatcher.hpp
docs/: Architecture.md  Grammar.md  LUCID_GRAMMAR.md  LUC_CODEGEN.md  LUC_DIAGNOSTIC_CODES.md  LUC_ERROR.md  LUC_EXAMPLES.md  LUC_GRAMMAR.md  LUC_IO.md  LUC_PROJECT_OVERVIEW.md  LUC_REGEX.md  TASK_LOG.md  semantic_structure.md  temp.md
docs/codegen/: IRLowering.cpp  IRLowering.hpp  TypeMapping.cpp  TypeMapping.hpp
docs/examples/: OLD_DESIGN_EXAMPLES.md
docs/phases/: ASTNODE.md  CODEGEN.md  PARSER.md  SEMANTIC.md
language_support/luc-syntax-highlighter/: package.json
src/: QualifierRegistry.hpp  Tokens.hpp  main.cpp
src/ast/: BaseAST.hpp  DeclAST.hpp  ExprAST.hpp  PatternAST.hpp  StmtAST.hpp  TypeAST.hpp
src/ast/support/: ASTArena.hpp  ArenaSpan.hpp  InternedString.hpp
src/codegen/: CodeGen.cpp  CodeGen.hpp  IRLowering.cpp  IRLowering.hpp  IRLoweringBuilder.cpp  IRLoweringBuilder.hpp  IRLoweringDecl.cpp  IRLoweringExpr.cpp  IRLoweringIntrinsic.cpp  IRLoweringStmt.cpp  IntrinsicRegistry.cpp  IntrinsicRegistry.hpp  ValueEnv.hpp  luc_runtime.c
src/core/: SourceLocation.hpp  Tokens.hpp  tokens.hpp
src/core/ast/: BaseAST.hpp  DeclAST.hpp  ExprAST.hpp  StmtAST.hpp  TypeAST.hpp
src/core/diagnostics/: Diagnostic.cpp  Diagnostic.hpp  DiagnosticCodes.hpp  DiagnosticMessages.cpp  DiagnosticMessages.hpp  DiagnosticSeverity.hpp  DiagnosticTypes.hpp
src/core/memory/: ASTArena.hpp  StringPool.cpp  StringPool.hpp
src/debug/: ASTDumper.cpp  ASTDumper.hpp  DebugMacros.hpp  DebugUtils.hpp  SymbolDumper.cpp  SymbolDumper.hpp
src/diagnostics/: Diagnostic.hpp  DiagnosticCodes.hpp  DiagnosticEngine.cpp  DiagnosticEngine.hpp  DiagnosticMessages.cpp  DiagnosticMessages.hpp  diagnostic.cpp
src/interpreter/: DynLink.cpp  DynLink.hpp  Interpreter.cpp  Interpreter.hpp  JIT.cpp  JIT.hpp  README.md
src/lexer/: Lexer.cpp  Lexer.hpp
src/parser/: Dispatcher.cpp  Helpers.cpp  Lexer.cpp  LookAhead.cpp  ModuleResolver.cpp  ModuleResolver.hpp  ParseDecl.cpp  ParseExpr.cpp  ParseSession.cpp  ParseSession.hpp  Parser.cpp  Parser.hpp  ParserContext.hpp  ParserDecl.cpp  ParserExpr.cpp  ParserLookahead.cpp  ParserPattern.cpp  ParserState.cpp  ParserState.hpp  ParserStmt.cpp  ParserStructure.md  ParserType.cpp  TokenStream.cpp  TokenStream.hpp  lexer.cpp  lexer.hpp
src/parser/ast/: BaseAST.hpp  DeclAST.hpp  ExprAST.hpp  StmtAST.hpp  TypeAST.hpp
src/parser/common/: ParserAttributes.cpp  ParserHelpers.cpp
src/parser/decl/: EnumParser.cpp  FromParser.cpp  FuncParser.cpp  ImplParser.cpp  StructParser.cpp  TraitParser.cpp  TypeAliasParser.cpp  VarParser.cpp
src/parser/enum/: EnumParser.cpp
src/parser/generic/: GenericArgParser.cpp  GenericParamParser.cpp
src/parser/lexer/: Lexer.cpp
src/parser/literal/: LiteralParser.cpp
src/parser/lookahead/: ParserLookahead.cpp
src/parser/rules/: Concurrency.cpp  ParseDecl.cpp  ParseExpr.cpp  ParseStmt.cpp  ParseType.cpp  ParserType.cpp
src/parser/stmt/: BlockParser.cpp  FlowControlParser.cpp  LocalDeclParser.cpp  LoopParser.cpp  StmtParser.cpp  SwitchParser.cpp
src/parser/support/: ErrorRecovery.cpp  Helpers.cpp  LookAhead.cpp  ParserContext.hpp  TokenStream.hpp
src/registry/: AttributeRegistry.cpp  AttributeRegistry.hpp  BuiltinMethodRegistry.cpp  BuiltinMethodRegistry.hpp  IntrinsicRegistry.cpp  IntrinsicRegistry.hpp  QualifierRegistry.cpp  QualifierRegistry.hpp
src/sema/: NameResolver.hpp  Sema.cpp  Sema.hpp  SemaContext.hpp  TypeChecker.hpp
src/semantic/: Annotator.cpp  Annotator.hpp  BuiltinMethodRegistry.cpp  BuiltinMethodRegistry.hpp  Intrinsicregistry.hpp  SemanticAnalyzer.cpp  SemanticAnalyzer.hpp  SemanticCollector.cpp  SemanticCollector.hpp  SemanticDecl.cpp  SemanticExpr.cpp  SemanticHelpers.hpp  SemanticStmt.cpp  SemanticStructure.md  SemanticSymbol.hpp  SymbolTable.cpp  SymbolTable.hpp  TypeChecker.cpp  TypeChecker.hpp  TypeResolver.cpp  TypeResolver.hpp
tests/: advanced_features.luc  array_test.luc  attribute_test.luc  casting_test.luc  concurrency_test.luc  enums_and_switch.luc  expression_test.luc  expressions.luc  extension.luc  function_test.luc  functions.luc  generic.luc  impl_decl_test.luc  math_test.luc  minimal_nullable_test.luc  misc_syntax.luc  references_and_multi_assign.luc  reproduce_issue.luc  statement_test.luc  struct.luc  struct_test.luc  test_from.luc  test_func_ambiguity.luc  test_function_assignment.luc  test_generic.luc  test_generic_complex.luc  test_logic.luc  test_math.luc  test_semantic_errors.luc  trait_test.luc
tests/oop/: Player.luc  main.luc
(+224 files in other folders)
